--- a/src/main/resources/conf.properties
+++ b/src/main/resources/conf.properties
@@ -1,4 +1,4 @@
 mainWebApp = https://www.instagram.com/
-login_inst = olegzaycev69
-pass_inst = Zaycevjackass@14
+login_inst = your_login
+pass_inst = your_password
 searchuser = instasamka
